le html git push

--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles/style.scss" />
+    <link rel="stylesheet" href="src/styles/styles.scss" />
     <title>Bulbizarre</title>
   </head>
   <body>
-
+  <header class="identity">
+    <p class="identity_evolution">Pokemon de base</p>
+    <h1 class="identity_name"> Bulbizarre </h1>
+    <span class="identity_life"> 40 PV</span>
+    <img class="identity_type" src="src/img/leaf.png" alt="type feuille"/>
+  </header>
+  <main>
+    <figure>
+      <img class="appearance_image" src="src/img/bulbizarre.jpg" alt="Bulbizarre"/>
+      <figcaption class="appearance_details">
+        Pokémon Grain. Taille : 0.7m, poids : 6.9kg
+      </figcaption>
+    </figure>
+    <section>
+      <div class="attack_cost">
+        <img src="src/img/leaf.png" alt="Feuille"/>
+        <img src="src/img/leaf.png" alt="Feuille"/>
+      </div>
+      <div class="attack_des">
+        <h2 class="attack_name"></h2>
+        <p class="attack_details">Vampigraine A moins que tous les dégats infligés par cette attaque ne 
+          soient prévenus, vous pouvez retirer 1 marqueur de dégats de Bulbizarre
+        </p>
+        <div class="attack_damage">20</div>
+      </div>
+    </section>
+    <ul>
+      <li>
+        <p class="types_label"> Faiblesse </p>
+        <img src="src/img/fire.png" alt="Feu">
+      </li>
+      <li>
+        <p class="types_label"> Résistance </p>
+      </li>
+      <li>
+        <p class="types_label"> Coût de retraite  </p>
+        <img src="src/img//normal.png" alt="Normal">
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <p>Il a une étrange graine sur son dos. Elle grandit avec lui depuis la naissance. NIV 13 NO.1</p>
+  </footer>
   </body>
 </html>
