--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   </head>
   <body>
   <header class="identity">
-    <p class="identity_evolution">Pokemon de base</p>
-    <h1 class="identity_name"> Bulbizarre </h1>
-    <span class="identity_life"> 40 PV</span>
-    <img class="identity_type" src="src/img/leaf.png" alt="type feuille"/>
+    <p class="identity_evolution">Pokemon de base</p>  
+    <div class="header_1">
+      <h1 class="identity_name"> Bulbizarre </h1>
+      <div class="header_2">
+        <span class="identity_life"> 40 PV</span>
+        <img class="identity_type" src="src/img/leaf.png" alt="type feuille"/>
+      </div>
+    </div>
   </header>
   <main>
     <figure>
@@ -27,12 +31,11 @@
         <img src="src/img/leaf.png" alt="Feuille"/>
       </div>
       <div class="attack_des">
-        <h2 class="attack_name"></h2>
-        <p class="attack_details">Vampigraine A moins que tous les dégats infligés par cette attaque ne 
+        <p class="attack_details"><span class="attack_name">Vampigraine</span> A moins que tous les dégats infligés par cette attaque ne 
           soient prévenus, vous pouvez retirer 1 marqueur de dégats de Bulbizarre
         </p>
-        <div class="attack_damage">20</div>
       </div>
+      <p class="attack_damage">20</p>
     </section>
     <ul>
       <li>
